--- a/.github/cron.yml
+++ b/.github/cron.yml
@@ -3,6 +3,7 @@ name: Update README
 on:
   schedule:
     - cron: "0 0 * * *" # Run daily at 00:00 UTC
+  workflow_dispatch:
 
 jobs:
   update-readme:
